--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,6 +19,9 @@
       }
     ],
     "paths": {
+      "@/constants/*": ["./constants/*"],
+      "@/components/*": ["./components/*"],
+      "@/fonts/*": ["./app/fonts/*"],
       "@/*": ["./*"]
     }
   },
