--- a/package.json
+++ b/package.json
@@ -9,28 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/mdast": "^4.0.4",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
+    "github-slugger": "^2.0.0",
+    "globby": "^14.0.2",
+    "gray-matter": "^4.0.3",
+    "install": "^0.13.0",
     "lucide-react": "^0.446.0",
-    "next": "14.2.13",
+    "next": "15.0.3",
     "next-intl": "^3.20.0",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-wrap-balancer": "^1.1.1",
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.1",
+    "rehype-highlight": "^7.0.1",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-extract-toc": "^1.1.0",
+    "remark-parse": "^11.0.0",
+    "remark-toc": "^9.0.0",
     "sharp": "^0.33.5",
+    "shiki": "^1.23.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "unist-util-visit-parents": "^6.0.1",
+    "vfile-reporter": "^8.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
     "@iconify-json/devicon": "^1.2.2",
     "@iconify-json/devicon-plain": "^1.2.2",
+    "@shikijs/rehype": "^1.23.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
