--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,12 +23,28 @@
       }
     ],
     "paths": {
-      "@/constants/*": ["./constants/*"],
-      "@/components/*": ["./components/*"],
-      "@/fonts/*": ["./app/fonts/*"],
-      "@/*": ["./*"]
-    }
+      "@/constants/*": [
+        "./constants/*"
+      ],
+      "@/components/*": [
+        "./components/*"
+      ],
+      "@/fonts/*": [
+        "./app/fonts/*"
+      ],
+      "@/*": [
+        "./*"
+      ]
+    },
+    "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
