--- a/package.json
+++ b/package.json
@@ -11,41 +11,46 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@tailwindcss/typography": "^0.5.15",
+    "@next/mdx": "^15.3.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.4.4",
+    "@react-three/fiber": "^9.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/mdast": "^4.0.4",
     "@types/mdx": "^2.0.13",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.9.0",
+    "framer-motion": "^11.18.2",
     "github-slugger": "^2.0.0",
-    "globby": "^14.0.2",
+    "globby": "^14.1.0",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "lucide-react": "^0.446.0",
     "next": "15.0.3",
-    "next-intl": "^3.20.0",
+    "next-intl": "^3.26.5",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-wrap-balancer": "^1.1.1",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.1",
-    "rehype-highlight": "^7.0.1",
-    "rehype-pretty-code": "^0.14.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-extract-toc": "^1.1.0",
     "remark-parse": "^11.0.0",
     "remark-toc": "^9.0.0",
     "sharp": "^0.33.5",
-    "shiki": "^1.23.1",
-    "tailwind-merge": "^2.5.2",
+    "shiki": "^1.29.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "unist-util-visit-parents": "^6.0.1",
@@ -53,16 +58,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
-    "@iconify-json/devicon": "^1.2.2",
-    "@iconify-json/devicon-plain": "^1.2.2",
-    "@shikijs/rehype": "^1.23.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@iconify-json/devicon": "^1.2.29",
+    "@iconify-json/devicon-plain": "^1.2.29",
+    "@shikijs/rehype": "^1.29.2",
+    "@types/node": "^20.19.4",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
